# student-application-service

./: .gitignore
.github/workflows/: build_push_processors.yml
pdf-generator-lambda/: README.md  dynamodb-functions.tf  package.json  terraform.auto.tfvars  variables.tf
pdf-generator-lambda/src/: index.ts  run.ts
pdf-generator-lambda/terraform/: dynamodb-functions.tf  provider.tf  terraform.auto.tfvars
student-application-app/: Cargo.toml
student-application-app/src/: main.rs
student-application-lambda/: Cargo.toml
